# advent-of-code-2021

./: .gitignore  pyproject.toml  run.py
01_day/: solution.py
problems/day01/: problem.py
problems/day02/: problem.py
problems/day03/: problem.py
problems/day04/: problem.py
problems/day05/: problem.py
problems/day06/: problem.py
problems/day07/: problem.py
problems/day08/: problem.py
problems/day09/: problem.py
problems/day10/: problem.py
problems/day11/: problem.py
problems/day12/: problem.py
problems/day13/: problem.py
src/aoc/: base_problem.py
src/aoc/common/: grid.py  nodegraph.py
