[project]
name = "aoc"
version = "0.0.1"
authors = [
  { name="Matyas Barocsai"},
]
description = "A framework to simplify the modeling of Advent of Code problems in python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"